# CLI-Cheat-sheet

./: README.md  pyproject.toml
cheat_sheet/: cli.py
